test/Fail/Issue799.err
Issue799.agda:8.5-6: error: [CannotApply]
Expression used as function but does not have function type:
  expr: d
  type: D
when checking that {_} {_} {interesting-argument = _} {_} {_} {_}
are valid arguments to a function of type D
